Fixed ul listing for gigpress on small screen margin

--- a/style.css
+++ b/style.css
@@ -13,5 +13,6 @@
 
     ul.gigpress-listing {
         list-style-type: none;
+        margin-left: 0;
     }
 }
